--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --text-color:white;
+  --text-color: white;
   --bg-url: url(./assents/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
@@ -15,7 +15,7 @@
 }
 
 .light {
-  --text-color:black;
+  --text-color: black;
   --bg-url: url(./assents/bg-mobile-lght.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
@@ -27,6 +27,7 @@
 body {
   /*background: color image repeat position/size*/
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -63,15 +64,15 @@ body * {
   margin: 4px auto;
 }
 #switch button {
-width: 32px;
-height: 32px;
-background: white var(--switch-bg-url) no-repeat center;
-border: 0;
-border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  background: white var(--switch-bg-url) no-repeat center;
+  border: 0;
+  border-radius: 50%;
 
   position: absolute;
   top: 50%;
-   left: 0;
+  left: 0;
   z-index: 1;
   transform: translateY(-50%);
 }
@@ -105,9 +106,9 @@ ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   padding: 16px 24px;
-  
+
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
@@ -117,8 +118,8 @@ ul li a {
 
   text-decoration: none;
   font-weight: 500;
-  
-  transition: background 0.0s;
+
+  transition: background 0s;
 }
 
 /* pseudo-selector */
@@ -129,34 +130,44 @@ ul li a:hover {
 
 /*social links */
 #social-links {
-    display: flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
 
-    padding: 24px 0;
-    font-size: 24px;
+  padding: 24px 0;
+  font-size: 24px;
 }
 
 #social-links a {
-    display: flex;
-    
-    align-items: center;
-    
-    justify-content: center;
-    
-    padding: 16px;
-    
-    transition: background 0.2s;
-    
-    border-radius: 50%;
+  display: flex;
+
+  align-items: center;
+
+  justify-content: center;
+
+  padding: 16px;
+
+  transition: background 0.2s;
+
+  border-radius: 50%;
 }
 
 #social-links a:hover {
-  background: var(--highlight-color);  
+  background: var(--highlight-color);
 }
 
 footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
