adjustments and modifications

--- a/style.css
+++ b/style.css
@@ -6,22 +6,22 @@
 
 :root {
   --text-color: white;
-  --bg-url: url(./assents/bg-mobile.jpg);
+  --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assents/moon-star.svg);
+  --switch-bg-url: url(./assets/moon-star.svg);
 }
 
 .light {
   --text-color: black;
-  --bg-url: url(./assents/bg-mobile-lght.jpg);
+  --bg-url: url(./assets/bg-mobile-lght.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
-  --switch-bg-url: url(./assents/sun.svg);
+  --switch-bg-url: url(./assets/sun.svg);
 }
 
 body {
@@ -63,6 +63,7 @@ body * {
   width: 64px;
   margin: 4px auto;
 }
+
 #switch button {
   width: 32px;
   height: 32px;
@@ -75,11 +76,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -169,5 +175,24 @@ footer {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
